[package]
name = "pohb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
axum = "0.7.5"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
