[package]
name = "pohb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
axum = "0.7.5"
bytes = { version = "1.6.0", features = ["serde"] }
derive_more = "0.99.17"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt", "net", "time", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
